server/openshift/apiserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apiserver
  name: apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiserver
  strategy: {}
  template:
    metadata:
      labels:
        app: apiserver
    spec:
      containers:
      - image: quay.io/anlixue/aiserver:v1.3
        name: aiserver
        command: ["/app/startapiserver.sh"]
        volumeMounts:
          - mountPath: "/app/cache"
            name: emmodel-pvc
          - mountPath: "/app/DB"
            name: db-pvc
      volumes:
        - name: emmodel-pvc
          persistentVolumeClaim:
            claimName: apiserver-emmodel-pvc
        - name: db-pvc
          persistentVolumeClaim:
            claimName: apiserver-db-pvc
