server/openshift/chatserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chatserver
  name: chatserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatserver
  strategy: {}
  template:
    metadata:
      labels:
        app: chatserver
    spec:
      containers:
      - image: quay.io/anlixue/aiserver:v1.3
        name: aiserver
        command: ["/app/startchatserver.sh"]
        volumeMounts:
          - mountPath: "/app/cache"
            name: emmodel-pvc
          - mountPath: "/app/DB"
            name: db-pvc
      volumes:
        - name: emmodel-pvc
          persistentVolumeClaim:
            claimName: chatserver-emmodel-pvc
        - name: db-pvc
          persistentVolumeClaim:
            claimName: chatserver-db-pvc
