server/openshift/llmserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: llmserver
  name: llmserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llmserver
  strategy: {}
  template:
    metadata:
      labels:
        app: llmserver
    spec:
      containers:
      - image: quay.io/anlixue/llmserver:v1.0
        name: llmserver
        resources: {}
        nodeName: compute-1-ru25.hci1.pbm.ihost.com 
status: {}
