server/openshift/myllm.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: llmserver
  name: llmserver
spec:
  containers:
  - name: llmserver
    image: ollama/ollama
  restartPolicy: Always
  nodeName: compute-1-ru25.hci1.pbm.ihost.com 
status: {}
