server/openshift/apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apiserver
  name: apiserver
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: apiserver
  type: ClusterIP
