server/openshift/chatserver-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: chatserver
  name: chatserver
spec:
  port:
    targetPort: 5006
  to:
    kind: Service
    name: chatserver
